<resources>
    <string name="app_name">订餐</string>

    <string name="tabBar_home">首页</string>
    <string name="tabBar_order">订单</string>
    <string name="tabBar_find">发现</string>
    <string name="tabBar_mine">我的</string>

    <string name="toolbar_input_hint">请输入商家或商品名称</string>

    <!-- 首页 -->
    <string name="home_food">美食</string>
    <string name="home_chafing_dish">火锅</string>
    <string name="home_fresh">生鲜</string>
    <string name="home_garden_stuff">果蔬</string>
    <string name="home_went">跑腿</string>
    <string name="home_tea">下午茶</string>
    <string name="home_pizza">披萨</string>
    <string name="home_bread">面包</string>
    <string name="home_chicken">炸鸡</string>
    <string name="home_flowers">鲜花</string>
    <string name="home_business">附近商家</string>
    <string name="home_sort">综合排序</string>
    <string name="home_nearby">附近最近</string>
    <string name="home_sales">销量最高</string>
    <string name="home_monthly_sales">月售</string>
    <string name="home_dispatching">配送</string>
    <string name="home_start_give">起送</string>

    <!-- 登录页 -->
    <string name="login_login">登录</string>
    <string name="login_register">立即注册</string>
    <string name="login_mobile">手机号</string>
    <string name="login_password">密码</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_wechat">微信登录</string>
    <string name="login_qq">QQ登录</string>

    <!-- 订单页 -->
    <string name="order_cancel">取消订单</string>
    <string name="order_reminder">我要催单</string>
    <string name="order_refundment">申请退款</string>
    <string name="order_logistics">查看物流</string>
    <string name="order_take">确认收货</string>
    <string name="order_delete">删除订单</string>
    <string name="order_buy">再次购买</string>
    <string name="order_assess">立即评价</string>
    <string name="order_refundment_detail">退款详情</string>
    <string name="order_refundment_cancel">取消退款</string>
    <string name="order_tab1">全部\n(4)</string>
    <string name="order_tab2">待接单\n(1)</string>
    <string name="order_tab3">待配送\n(1)</string>
    <string name="order_tab4">待收货\n(1)</string>
    <string name="order_tab5">待评价\n(1)</string>
    <string name="order_tab6">退款中\n(0)</string>
    <string name="order_tab7">交易成功\n(0)</string>
    <string name="order_tab8">交易取消\n(0)</string>

    <!-- 我的 -->
    <string name="mine_nickname">白花恋诗</string>
    <string name="mine_collection">商品收藏</string>
    <string name="mine_follow">店铺关注</string>
    <string name="mine_cart">我的购物车</string>
    <string name="mine_balance">我的余额</string>
    <string name="mine_address">收货地址</string>
    <string name="mine_foot">我的足迹</string>
    <string name="mine_help">帮助中心</string>
    <string name="mine_contact">联系客服</string>
    <string name="mine_new">NEW</string>

    <string name="mine_income_log">收支记录</string>
    <string name="mine_message">消息</string>
    <string name="mine_recharge">充值</string>

    <!-- 支付 -->
    <string name="pay">支付</string>
    <string name="pay_count">付款金额</string>
    <string name="pay_num">¥ 96.50</string>
    <string name="pay_type">选择支付方式</string>
    <string name="pay_balance">余额支付</string>
    <string name="pay_ali">支付宝支付</string>
    <string name="pay_wechat">微信支付</string>
    <string name="pay_submit">确认支付</string>

    <!-- 收货地址 -->
    <string name="address">我的收货地址</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="address_add">添加新地址</string>

    <!-- 我的余额 -->
    <string name="balance">我的余额</string>
    <string name="balance_detail">明细</string>
    <string name="balance_use">可用余额（余额）</string>
    <string name="balance_num">26.00</string>
    <string name="balance_recharge">充值</string>
    <string name="balance_withdraw">提现</string>
    <string name="balance_bank">提现只能提现到银行卡</string>
    <string name="bank_manage">银行卡管理</string>

    <!-- 评价 -->
    <string name="appraise">评价</string>
    <string name="appraise_rider">骑手 李四</string>
    <string name="appraise_time">2月25日10:45左右送达</string>
    <string name="appraise_unsatisfaction">不满意</string>
    <string name="appraise_satisfaction">满意</string>
    <string name="appraise_seller">麻辣小龙虾（人民广场店）</string>
    <string name="appraise_input">亲，请您对该店铺进行评价</string>
    <string name="appraise_upload">上传图片</string>
    <string name="appraise_submit">提交评价</string>

    <!-- 购物车 -->
    <string name="cart">购物车</string>
    <string name="finish">完成</string>
    <string name="cart_settle">去结算</string>

    <!-- 跑腿 -->
    <string name="run">跑腿</string>
    <string name="deliver_address">临沂市兰山区金雀山路与陶然路90号</string>
    <string name="deliver_user">张若虚</string>
    <string name="deliver_mobile">13823532943</string>
    <string name="take_address">物品送到哪里去</string>
    <string name="remark">备注</string>
    <string name="remark_text">物品描述或送件要求</string>
    <string name="goods_img">物品图片</string>
    <string name="agree_agreement">同意并接受《外卖跑腿协议》</string>
    <string name="recommend">推荐骑手</string>
    <string name="random">如不选择，默认随机分配</string>
    <string name="rider1">李白</string>
    <string name="rider2">杜甫</string>
    <string name="rider3">王羲之</string>
    <string name="order_submit">提交订单</string>

    <!-- 退款详情 -->
    <string name="seller_label">商家名称</string>
    <string name="seller_name">蜜雪冰城</string>
    <string name="order_label">订单号码</string>
    <string name="order_no">369681296649</string>
    <string name="back_money_label">退款金额</string>
    <string name="back_path">退款流程</string>

    <!-- 订单详情 -->
    <string name="order_detail">订单详情</string>
    <string name="order_status">订单状态</string>
    <string name="order_status_text">待评价</string>
    <string name="order_label2">订单号</string>
    <string name="copy_order_no">复制订单号</string>
    <string name="leave_word">买家留言</string>
    <string name="take_info">收货信息</string>
    <string name="take_user">收货人</string>
    <string name="rider_info">骑手信息</string>
    <string name="rider_label">骑手</string>
    <string name="mobile_label">电话</string>
    <string name="order_create_time_label">下单时间</string>
    <string name="order_create_time">2022&#8211;07&#8211;07 09:22:31</string>
</resources>