<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.OrderDetailActivity">

    <!-- 顶部标题栏 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="@color/white"
        android:paddingTop="26dp">

        <ImageView
            android:id="@+id/order_detail_back"
            style="@style/action_bar_back"
            android:contentDescription="@string/order_detail" />

        <TextView
            style="@style/action_bar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/order_detail" />
    </RelativeLayout>
    <!-- 顶部标题栏 end -->

    <View
        style="@style/mine_line"
        android:background="#EEEEEE" />

    <!-- 订单状态 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp">

        <TextView
            style="@style/order_detail_label"
            android:text="@string/order_status" />

        <TextView
            style="@style/order_detail_content"
            android:text="@string/order_status_text" />
    </LinearLayout>

    <View
        style="@style/mine_line"
        android:background="#EEEEEE" />
    <!-- 订单状态 end -->

    <!-- 订单号 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp">

        <TextView
            style="@style/order_detail_label"
            android:text="@string/order_label2" />

        <TextView
            style="@style/order_detail_content"
            android:layout_width="wrap_content"
            android:text="@string/order_no" />

        <TextView
            style="@style/order_detail_content"
            android:gravity="end"
            android:text="@string/copy_order_no"
            android:textColor="#31A2FD" />
    </LinearLayout>

    <View
        style="@style/mine_line"
        android:background="#EEEEEE" />
    <!-- 订单号 end -->

    <!-- 下单时间 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp">

        <TextView
            style="@style/order_detail_label"
            android:text="@string/order_create_time_label" />

        <TextView
            style="@style/order_detail_content"
            android:text="@string/order_create_time" />
    </LinearLayout>

    <View
        style="@style/mine_line"
        android:background="#EEEEEE" />
    <!-- 下单时间 end -->

    <!-- 买家留言 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp">

        <TextView
            style="@style/order_detail_label"
            android:text="@string/leave_word" />
    </LinearLayout>
    <!-- 买家留言 end -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mine_bg"
        android:paddingVertical="8dp"
        android:paddingStart="13dp"
        android:text="@string/take_info"
        android:textColor="@color/gray_6"
        android:textSize="14sp" />

    <!-- 收货人 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp">

        <TextView
            style="@style/order_detail_label"
            android:text="@string/take_user" />

        <TextView
            style="@style/order_detail_content"
            android:layout_width="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/deliver_user" />

        <TextView
            style="@style/order_detail_content"
            android:text="@string/deliver_mobile" />
    </LinearLayout>

    <View
        style="@style/mine_line"
        android:background="#EEEEEE" />
    <!-- 收货人 end -->

    <!-- 收货地址 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp">

        <TextView
            style="@style/order_detail_label"
            android:text="@string/mine_address" />

        <TextView
            style="@style/order_detail_content"
            android:text="@string/deliver_address" />
    </LinearLayout>

    <View
        style="@style/mine_line"
        android:background="#EEEEEE" />
    <!-- 收货地址 end -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mine_bg"
        android:paddingVertical="8dp"
        android:paddingStart="13dp"
        android:text="@string/rider_info"
        android:textColor="@color/gray_6"
        android:textSize="14sp" />

    <!-- 骑手 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp">

        <TextView
            style="@style/order_detail_label"
            android:text="@string/rider_label" />

        <TextView
            style="@style/order_detail_content"
            android:text="@string/deliver_user" />
    </LinearLayout>

    <View
        style="@style/mine_line"
        android:background="#EEEEEE" />
    <!-- 骑手 end -->

    <!-- 电话 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp">

        <TextView
            style="@style/order_detail_label"
            android:text="@string/mobile_label" />

        <TextView
            style="@style/order_detail_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/deliver_mobile" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mobile_icon" />
    </LinearLayout>
    <!-- 电话 end -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mine_bg"
        android:paddingVertical="8dp"
        android:paddingStart="13dp"
        android:text="@string/order_detail"
        android:textColor="@color/gray_6"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:paddingStart="13dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cart_seller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="13dp"
            android:drawableStart="@mipmap/order_seller"
            android:drawablePadding="9dp"
            android:gravity="center"
            android:text="@string/seller_name"
            android:textColor="@color/blackText3"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:scaleType="center"
                android:src="@mipmap/food1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F7F7F7"
                android:orientation="vertical"
                android:paddingStart="15dp">

                <TextView
                    android:id="@+id/cart_food_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/home_chicken"
                    android:textColor="@color/blackText3"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/cart_food_norms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cart_food_name"
                    android:text="规格：无"
                    android:textColor="@color/gray_6"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/cart_food_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cart_food_norms"
                    android:text="×1"
                    android:textColor="@color/gray_6"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/cart_food_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="12dp"
                    android:text="¥29"
                    android:textColor="@color/blackText3"
                    android:textSize="12sp" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>