<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mine_bg"
    tools:context=".ui.RunActivity">

    <!-- 顶部标题栏 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:background="@color/white"
        android:paddingTop="26dp">

        <ImageView
            android:id="@+id/run_back"
            style="@style/action_bar_back"
            android:contentDescription="@string/run" />

        <TextView
            style="@style/action_bar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/run" />

        <TextView
            style="@style/action_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:text="@string/tabBar_order"
            android:textSize="13sp" />
    </RelativeLayout>
    <!-- 顶部标题栏 end -->

    <View
        style="@style/mine_line"
        android:layout_marginTop="74dp"
        android:background="#EEEEEE" />

    <LinearLayout
        android:id="@+id/run_input_wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="18dp">

            <View
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:layout_marginEnd="13dp"
                android:background="@drawable/shape_deliver_address" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deliver_address"
                    android:textColor="@color/blackText3"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deliver_user"
                        android:textColor="@color/blackText3"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80dp"
                        android:text="@string/deliver_mobile"
                        android:textColor="@color/blackText3"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/nav_ico_back" />
        </LinearLayout>

        <View
            style="@style/mine_line"
            android:background="#EEEEEE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp">

            <View
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_gravity="center"
                android:layout_marginEnd="13dp"
                android:background="@drawable/shape_take_address" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/take_address"
                android:textColor="@color/blackText3"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/nav_ico_back" />
        </LinearLayout>

        <View
            style="@style/mine_line"
            android:background="#EEEEEE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/remark"
                android:textColor="@color/blackText3"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remark_text"
                android:textColor="@color/black_tag"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            style="@style/mine_line"
            android:background="#EEEEEE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/goods_img"
                android:textColor="@color/blackText3"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/btn_upload" />
        </LinearLayout>
    </LinearLayout>

    <!-- 同意协议 -->
    <LinearLayout
        android:id="@+id/agree_agreement_wrap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/run_input_wrap">

        <RadioButton
            android:id="@+id/pay_balance"
            style="@style/radio_button"
            android:layout_width="30dp"
            android:layout_marginStart="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_agreement"
            android:textColor="@color/black_tag"
            android:textSize="14sp" />
    </LinearLayout>
    <!-- 同意协议 end -->

    <!-- 选择骑手 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/agree_agreement_wrap"
        android:background="#FFF0CF"
        android:paddingVertical="12dp"
        android:paddingStart="18dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="14dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommend"
                android:textColor="@color/blackText3"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random"
                android:textColor="@color/black_tag"
                android:textSize="12sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/home_ico1"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/rider1"
            android:textColor="@color/blackText3"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:drawableTop="@mipmap/home_ico2"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/rider2"
            android:textColor="@color/blackText3"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/home_ico3"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/rider3"
            android:textColor="@color/blackText3"
            android:textSize="12sp" />
    </LinearLayout>
    <!-- 选择骑手 end -->

    <!-- 底部悬浮卡片 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingHorizontal="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/run_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                tools:text="@string/appraise_seller" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/pay_num"
                android:textColor="#FA4C42"
                android:textSize="14sp" />
        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/run_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_submit" />
    </LinearLayout>
    <!-- 底部悬浮卡片 end -->
</RelativeLayout>