<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/address_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_wechat" />

        <RadioButton
            android:id="@+id/address_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_wechat" />
    </LinearLayout>

    <TextView
        android:id="@+id/address_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_wechat" />

    <TextView
        android:id="@+id/address_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_wechat" />

    <View
        style="@style/mine_line"
        android:background="#eeeeee" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>